--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -19,13 +19,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Codacy Analysis CLI
-        uses: codacy/codacy-analysis-cli-action@v5
+        uses: codacy/codacy-analysis-cli-action@v4 # Updated to a valid version
         with:
           api-token: ${{ secrets.CODACY_API_TOKEN }}
           output: results.sarif
           format: sarif
           gh-code-scanning-compat: true
-          max-allowed-issues: 100 # Set to a manageable value for your project
+          max-allowed-issues: 100
 
       - name: Upload Sarif Results File
         uses: github/codeql-action/upload-sarif@v2
