--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,9 @@
         <dandelion.datatables.version>1.1.0</dandelion.datatables.version>
 
         <cobertura.version>2.7</cobertura.version>
+        
+        <sonar.organization>rajateamlead</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
     </properties>
 
